fixes shopping cart service
